syntax = "proto3";

package tests.harness.cases;
option go_package = "cases";

import "validate/validate.proto";

message RepeatedNone     { repeated int64  val = 1; }
message RepeatedMin      { repeated float  val = 1 [(validate.rules).repeated.min_items = 2]; }
message RepeatedMax      { repeated double val = 1 [(validate.rules).repeated.max_items = 3]; }
message RepeatedMinMax   { repeated sfixed32 val = 1 [(validate.rules).repeated = {min_items: 2, max_items: 4}]; }
message RepeatedExact    { repeated uint32 val = 1 [(validate.rules).repeated = {min_items: 3, max_items: 3}]; }
message RepeatedUnique   { repeated string val = 1 [(validate.rules).repeated.unique = true]; }
message RepeatedItemRule { repeated float val = 1 [(validate.rules).repeated.items.float.gt = 0]; }

