syntax = "proto3";
package tests.kitchensink;

option go_package = "tests_kitchensink";

import "validate/validate.proto";

message Int64 {
    int64 none = 1;

    int64 lt  = 2 [(validate.rules).int64.lt  = 5]; // x <  5
    int64 lte = 3 [(validate.rules).int64.lte = 5]; // x <= 5
    int64 gt  = 4 [(validate.rules).int64.gt  = 5]; // x >  5
    int64 gte = 5 [(validate.rules).int64.gte = 5]; // x >= 5

    int64 lt_gt   = 6 [(validate.rules).int64 = {gt:  10, lt:  15}]; // x >  gt && x <  lt
    int64 lt_gte  = 7 [(validate.rules).int64 = {gte: 10, lt:  15}]; // x >= gte && x <  lt
    int64 lte_gt  = 8 [(validate.rules).int64 = {gt:  10, lte: 15}]; // x >  gt && x <= lte
    int64 lte_gte = 9 [(validate.rules).int64 = {gte: 10, lte: 15}]; // x >= gte && x <= lte

    int64 lt_gt_inv   = 10 [(validate.rules).int64 = {lt:  20, gt:  25}]; // x <  lt || x >  gt
    int64 lt_gte_inv  = 11 [(validate.rules).int64 = {lt:  20, gte: 25}]; // x <  lt || x >= gte
    int64 lte_gt_inv  = 12 [(validate.rules).int64 = {lte: 20, gt:  25}]; // x <= lte || x >  gt
    int64 lte_gte_inv = 13 [(validate.rules).int64 = {lte: 20, gte: 25}]; // x <= lte || x >= gte

    int64 in     = 14 [(validate.rules).int64 = {in: [30, 35]}];
    int64 not_in = 15 [(validate.rules).int64 = {not_in: [40, 45]}];

    int64 const = 16 [(validate.rules).int64.const = 50];
}
