syntax = "proto3";
package tests.kitchensink;

option go_package = "tests_kitchensink";

import "validate/validate.proto";

message Map {
    map<string,int64> none = 1;

    map<int64, bytes> min_pairs = 2 [(validate.rules).map.min_pairs = 1];
    map<string, double> max_pairs = 3 [(validate.rules).map.max_pairs = 2];
    map<string, float> min_max_pairs = 4 [(validate.rules).map = {min_pairs: 3, max_pairs: 4}];
    map<sint32, Enum> eq_pairs = 5 [(validate.rules).map = {min_pairs: 5, max_pairs: 5}];

    map<uint64, Embed> no_sparse = 6 [(validate.rules).map.no_sparse = true];

    map<string, Enum> value_rules = 7 [(validate.rules).map.values.enum.defined_only = true];
    map<fixed32, Embed> key_rules = 8 [(validate.rules).map.keys.fixed32 = {gte: 200, lt: 600}];

    message Embed {}
    enum Enum {DEFAULT = 0;}
}
